--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=ffd29d9dc72f007793b71ffaeaa0af9a
 ###< symfony/framework-bundle ###
 
 
-
+MAILER_URL=smtp://smtp.mailtrap.io:2525?encryption=tls&auth_mode=login&username=52b3e7f99307a6&password=2ac707b865618a
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
@@ -29,3 +29,13 @@ APP_SECRET=ffd29d9dc72f007793b71ffaeaa0af9a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/tito?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+###< symfony/swiftmailer-bundle ###
