--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.4.1",
+        "datatables.net": "^1.10.20",
         "jquery": "^3.4.1",
         "popper.js": "^1.16.0"
     }
